# vulnerability-detection-pass

./: README.md
Ctest/: out.bc  test  test.bc  test.c  test.ll
llvm-pass-skeleton/: CMakeLists.txt  README.md  malloc_test1.ll  malloc_test2.ll  test copy.ll  test.ll
llvm-pass-skeleton/add/: add.bc  add.c  add.ll  add2.ll
llvm-pass-skeleton/array/: array.bc  array.c  array.ll
llvm-pass-skeleton/array_test/: a.out  out.bc  out.ll  test.bc  test.c  test.ll
llvm-pass-skeleton/exception_test/: test.bc  test.c
llvm-pass-skeleton/func/: func.bc  func.c  func.ll
llvm-pass-skeleton/malloc/: malloc.bc  malloc.c  malloc.ll
llvm-pass-skeleton/malloc_test/: a.out  out.bc  out.ll  test.bc  test.c  test.ll
llvm-pass-skeleton/malloc_test2/: a.out  out.bc  out.ll  test.bc  test.c  test.ll
llvm-pass-skeleton/malloc_test3/: a.out  test.c
llvm-pass-skeleton/runtime/: Makefile  compareOffsetNSize.c  compareOffsetNSizeOut  wrapping_malloc.c  wrapping_malloc.cpp
llvm-pass-skeleton/skeleton_lib/: CMakeLists.txt  skeleton.cpp  skeleton.h
llvm-pass-skeleton/storeload_test/: out.bc  out.ll  test.bc  test.c  test.ll
llvm-pass-skeleton/struct/: struct.bc  struct.c  struct.ll
llvm-pass-skeleton/test/: a.out  out.bc  test.bc  test.c  test.ll  test2.c
llvm-pass-skeleton/var/: var.bc  var.c  var.ll  var2.bc  var2.c  var2.ll  var3.bc  var3.ll
test/: test.c
